--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                                                                                 陈腾飞的个人主页
+                                                                                 欢迎来到陈腾飞的个人主页
  
 #姓名：陈腾飞
 
@@ -8,6 +8,7 @@
 
 #学院：信息与工程学院
 
+#班级：电信194
 
 #在修课程：信号与系统
 
