--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-                                                                                 欢迎来到陈腾飞的个人主页 
+                                                                                 陈腾飞的个人主页 
 #姓名：陈腾飞
-
 
 #学校：浙江大学宁波理工学院
 
-
 #学院：信息与工程学院
-
 
 #班级：电信194
 
-
 #在修课程：信号与系统
-
 
 #指导老师：王一刚
