--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
                                                                                   陈腾飞的个人主页
-#姓名：陈腾飞
-
-
-#学校：浙江大学宁波理工学院
-
-
-#学院：信息与工程学院
-
-
-#在修课程：信号与系统
-
-
-#指导老师：王一刚
+####姓名：陈腾飞
+####学校：浙江大学宁波理工学院
+####学院：信息与工程学院
+####在修课程：信号与系统
+####指导老师：王一刚
